omnepp.ini: fill in some more blanks (still WIP)

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -36,9 +36,17 @@ repeat = 10
 # "all wireless users are uniformly distributed in a 400m^2
 # *quadratic* area around the AccessPoint" (so not as in ex 3.6))
 # TODO: note that mobile stations also include ftp and video laptop!
-**.[names of mobile stations].mobility.initialX = uniform(20m)
-**.[names of mobile stations].mobility.initialY = uniform(20m)
-**.[names of mobile stations].mobility.initialZ = 0m
+**.BrowsingLaptop[*].mobility.initialX = uniform(20m)
+**.BrowsingLaptop[*].mobility.initialY = uniform(20m)
+**.BrowsingLaptop[*].mobility.initialZ = 0m
+
+**.FTPLaptop.mobility.initialX = uniform(20m)
+**.FTPLaptop.mobility.initialY = uniform(20m)
+**.FTPLaptop.mobility.initialZ = 0m
+
+**.ConferenceLaptop.mobility.initialX = uniform(20m)
+**.ConferenceLaptop.mobility.initialY = uniform(20m)
+**.ConferenceLaptop.mobility.initialZ = 0m
 
 # Some tcp settings
 **.tcpType = "TCP"
@@ -62,8 +70,8 @@ repeat = 10
 **.mgmt.frameCapacity = 100
 
 # Group specific parameters
-**.[name of web browsing laptop].tcpApp[0].replyLength = # from trace file trace_13.txt
-**.[name of web browsing laptop].tcpApp[0].idleInterval = exponential(20s)
+**.BrowsingLaptop.tcpApp[0].replyLength = # from trace file trace_13.txt
+**.BrowsingLaptop.tcpApp[0].idleInterval = exponential(20s)
 
 **.networkConfiguratorModule = "" # ?
 # set static routes
