set tcp.mss and advertised window (double-check welcome ;) )

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -53,8 +53,16 @@ repeat = 10
 **.tcp.tcpAlgorithmClass = TCPNewReno
 **.tcp.windowScalingSupport = true
 **.tcpApp[*].dataTransferMode = "object"
-**.tcp.mss =
-**.tcp.advertisedWindow = # do not use this.mss here but directly give a number
+
+# the PDUs of upper layers (e.g., TCP) should be as large as possible
+# to reduce protocol overhead: Assimung a 14-Byte Ethernet header (i.e. without
+# IEEE802.1Q tags bc I doubt we're using the VLAN tagging feature) +
+# and a 20-Byte IPv4 header (i.e. without options TODO– is this true?),
+# we're left with 1500-14-20 = 1466 bytes of TCP PDU.
+**.tcp.mss = 1466
+# the receiver side advertises a receive window of 1000 times the maximum segment size (MSS).
+# do not use this.mss here but directly give a number
+**.tcp.advertisedWindow = 1466000
 
 # Routing
 **.networkConfiguratorModule = ""
