remove superfluous files, rename network to something less generic

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = Network
+network = ExamTaskNetwork
 # TODO: choose sensible values
 sim-time-limit = ${simtime=1000, 3000, 10000}s
 repeat = 10
