fix warnings, add foundation for tracereading

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -28,24 +28,26 @@ repeat = 10
 **.channelNumber = 0
 # "the students usually do not move with their laptop 
 # and can be considered stationary"
-**.mobilityType = StationaryMobility
+**.mobilityType = "StationaryMobility"
 **.mobility.initFromDisplayString = false
+# [lotte] wait why do we need these?
 **.AccessPoint.mobility.initialX = 25
 **.AccessPoint.mobility.initialY = 25
 **.AccessPoint.mobility.initialZ = 0m
 # "all wireless users are uniformly distributed in a 400m^2
 # *quadratic* area around the AccessPoint" (so not as in ex 3.6))
-# TODO: note that mobile stations also include ftp and video laptop!
-**.BrowsingLaptop[*].mobility.initialX = uniform(20m)
-**.BrowsingLaptop[*].mobility.initialY = uniform(20m)
+# note that mobile stations also include ftp and video laptop!
+# TODO: is the default RNG OK?
+**.BrowsingLaptop[*].mobility.initialX = uniform(0m, 20m)
+**.BrowsingLaptop[*].mobility.initialY = uniform(0m, 20m)
 **.BrowsingLaptop[*].mobility.initialZ = 0m
 
-**.FTPLaptop.mobility.initialX = uniform(20m)
-**.FTPLaptop.mobility.initialY = uniform(20m)
+**.FTPLaptop.mobility.initialX = uniform(0m, 20m)
+**.FTPLaptop.mobility.initialY = uniform(0m, 20m)
 **.FTPLaptop.mobility.initialZ = 0m
 
-**.ConferenceLaptop.mobility.initialX = uniform(20m)
-**.ConferenceLaptop.mobility.initialY = uniform(20m)
+**.ConferenceLaptop.mobility.initialX = uniform(0m, 20m)
+**.ConferenceLaptop.mobility.initialY = uniform(0m, 20m)
 **.ConferenceLaptop.mobility.initialZ = 0m
 
 # Some tcp settings
@@ -75,12 +77,17 @@ repeat = 10
 **.wlan[*].mac.cwMinData = 7
 **.wlan[*].mac.cwMinMulticast = 31
 **.opMode = "g"
-**.mgmt.frameCapacity = 100
+**.mgmt.frameCapacity = 50
 
-# Group specific parameters
-**.BrowsingLaptop.tcpApp[0].replyLength = # from trace file trace_13.txt
-**.BrowsingLaptop.tcpApp[0].idleInterval = exponential(20s)
 
-**.networkConfiguratorModule = "" # ?
+**.BrowsingLaptop[*].numTcpApps = 1
+**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
+**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
+# Group specific parameters:
+# The requested size (in Byte) from trace file trace_13.txt
+**.BrowsingLaptop[*].tcpApp[0].replyLength = get_trace()
+**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
+
+#**.networkConfiguratorModule = "" # ?
 # set static routes
-**.Router.routingFile                          = "StaticRoutes.irt"
+#**.Router.routingFile                          = "StaticRoutes.irt"
