fix more things

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -52,7 +52,7 @@ repeat = 10
 
 # Some tcp settings
 **.tcpType = "TCP"
-**.tcp.tcpAlgorithmClass = TCPNewReno
+**.tcp.tcpAlgorithmClass = "TCPNewReno"
 **.tcp.windowScalingSupport = true
 **.tcpApp[*].dataTransferMode = "object"
 
@@ -83,6 +83,9 @@ repeat = 10
 **.BrowsingLaptop[*].numTcpApps = 1
 **.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
 **.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
+**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
+
+
 # Group specific parameters:
 # The requested size (in Byte) from trace file trace_13.txt
 **.BrowsingLaptop[*].tcpApp[0].replyLength = get_trace()
