add comments & some TCP config

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -36,7 +36,7 @@ repeat = 10
 **.AccessPoint.mobility.initialZ = 0m
 # "all wireless users are uniformly distributed in a 400m^2
 # *quadratic* area around the AccessPoint" (so not as in ex 3.6))
-# note that mobile stations also include ftp and video laptop!
+# note that this also includes the ftp and video laptops!
 # TODO: is the default RNG OK?
 **.BrowsingLaptop[*].mobility.initialX = uniform(0m, 20m)
 **.BrowsingLaptop[*].mobility.initialY = uniform(0m, 20m)
@@ -50,10 +50,11 @@ repeat = 10
 **.ConferenceLaptop.mobility.initialY = uniform(0m, 20m)
 **.ConferenceLaptop.mobility.initialZ = 0m
 
-# Some tcp settings
+# general tcp settings
 **.tcpType = "TCP"
 **.tcp.tcpAlgorithmClass = "TCPNewReno"
 **.tcp.windowScalingSupport = true
+# This is important for the TCPGenericSrvApp to reply to the requests
 **.tcpApp[*].dataTransferMode = "object"
 
 # the PDUs of upper layers (e.g., TCP) should be as large as possible
@@ -79,18 +80,25 @@ repeat = 10
 **.opMode = "g"
 **.mgmt.frameCapacity = 50
 
+# Internet TCP settings
+**.Internet.numTcpApps = 1
+**.Internet.tcpApp[0].typename = "TCPGenericSrvApp"
+**.Internet.tcpApp[0].localPort = 80
 
+# TODO: TCP apps for ftp, professor, cctv etc
+
+# BrowsingLaptop TCP settings
 **.BrowsingLaptop[*].numTcpApps = 1
 **.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
 **.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
 **.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
-
-
+**.BrowsingLaptop[*].tcpApp[0].localPort = -1
+**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
+**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
+# TODO: param OK?
+**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
 # Group specific parameters:
 # The requested size (in Byte) from trace file trace_13.txt
 **.BrowsingLaptop[*].tcpApp[0].replyLength = get_trace()
 **.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
-#**.networkConfiguratorModule = "" # ?
-# set static routes
-#**.Router.routingFile                          = "StaticRoutes.irt"
