add static routing tables

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -102,3 +102,6 @@ repeat = 10
 **.BrowsingLaptop[*].tcpApp[0].replyLength = get_trace()
 **.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
+# set static routes
+**.RemoteRouter.routingFile = "StaticRoutes_RemoteRouter.irt"
+**.MainRouter.routingFile = "StaticRoutes_MainRouter.irt"
