--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -4,10 +4,6 @@ network = ExamTaskNetwork
 sim-time-limit = ${simtime=1000, 3000, 10000}s
 repeat = 10
 
-# [TODO] - CCTV camera stream:
-#  - activated for one team member
-#  - deactivated for the other team member
-
 # some can be enabled if desired, but
 # this produces a lot of data
 **.thruputMeter.**.vector-recording = true	
@@ -81,26 +77,48 @@ repeat = 10
 **.mgmt.frameCapacity = 50
 
 # Internet TCP settings
-**.Internet.numTcpApps = 1
-**.Internet.tcpApp[0].typename = "TCPGenericSrvApp"
-**.Internet.tcpApp[0].localPort = 80
+#**.Internet.numTcpApps = 1
+#**.Internet.tcpApp[0].typename = "TCPGenericSrvApp"
+#**.Internet.tcpApp[0].localPort = 80
 
 # TODO: TCP apps for ftp, professor, cctv etc
 
 # BrowsingLaptop TCP settings
-**.BrowsingLaptop[*].numTcpApps = 1
-**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
-**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
-**.BrowsingLaptop[*].tcpApp[0].localPort = -1
-**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
-**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
+#**.BrowsingLaptop[*].numTcpApps = 1
+#**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
+#**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
+#**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
+#**.BrowsingLaptop[*].tcpApp[0].localPort = -1
+#**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
+#**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
 # TODO: param OK?
-**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
+#**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
 # Group specific parameters:
 # The requested size (in Byte) from trace file trace_13.txt
-**.BrowsingLaptop[*].tcpApp[0].replyLength = get_trace()
-**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
+#**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(250B)#get_trace()
+#**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
+
+# The monitor receives videodata, is thus the client
+**.CCTVMonitoring.numUdpApps = 1
+**.CCTVMonitoring.udpApp[0].typename = "UDPVideoStreamCli"
+**.CCTVMonitoring.udpApp[0].serverAddress = "CCTVCamera"
+**.CCTVMonitoring.udpApp[0].serverPort = 1000
+**.CCTVMonitoring.udpApp[0].localPort = 1000
+**.CCTVMonitoring.udpApp[0].startTime = 1s
+
+# The [CCTV] stream is modelled as a constant UDP stream containing
+# packets of size 10KB every 40 ms.
+**.CCTVCamera.numUdpApps = 1
+**.CCTVCamera.udpApp[0].typename = "UDPVideoStreamSvr"
+**.CCTVCamera.udpApp[0].localPort = 1000
+**.CCTVCamera.udpApp[0].sendInterval = 40ms
+**.CCTVCamera.udpApp[0].packetLen = 10000B
+# make sure the video keeps streaming the whole experiment:
+# 25 transmissions à 10kB per second = 250000 B / s
+# * max(sim-time-limit) [currently 10000]
+# (plus 5s just to be sure)
+# TODO: adjust to new max(sim-time-limit) or figure out how to read that value
+**.CCTVCamera.udpApp[0].videoSize = 2500000000B
 
 # set static routes
 **.RemoteRouter.routingFile = "StaticRoutes_RemoteRouter.irt"
