add TO IMPLEMENT list to keep track of things

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -1,3 +1,9 @@
+# TO IMPLEMENT:
+# -------------
+# * video conf connection (maybe we can recycle our VoIPApp for that?)
+# * web browsing students
+# * FTP uploading student
+
 [General]
 network = ExamTaskNetwork
 # TODO: choose sensible values
