Added UDP transmission between ftplaptop and professors laptop

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -27,8 +27,8 @@ repeat = 10
 **.mobilityType = "StationaryMobility"
 **.mobility.initFromDisplayString = false
 # [lotte] wait why do we need these?
-**.AccessPoint.mobility.initialX = 25
-**.AccessPoint.mobility.initialY = 25
+**.AccessPoint.mobility.initialX = 25m
+**.AccessPoint.mobility.initialY = 25m
 **.AccessPoint.mobility.initialZ = 0m
 # "all wireless users are uniformly distributed in a 400m^2
 # *quadratic* area around the AccessPoint" (so not as in ex 3.6))
@@ -119,6 +119,27 @@ repeat = 10
 # (plus 5s just to be sure)
 # TODO: adjust to new max(sim-time-limit) or figure out how to read that value
 **.CCTVCamera.udpApp[0].videoSize = 2500000000B
+
+**.FTPLaptop.numUdpApps = 1
+**.FTPLaptop.udpApp[0].typename = "VoIPApp"
+**.FTPLaptop.udpApp[0].localPort = 1000
+**.FTPLaptop.udpApp[0].destPort = 1000
+**.FTPLaptop.udpApp[0].sendInterval = 200ms
+**.FTPLaptop.udpApp[0].messageLength = 44B
+**.FTPLaptop.udpApp[0].startTime = 0.1s
+**.FTPLaptop.udpApp[0].maxDelay = 200ms
+**.FTPLaptop.udpApp[0].destAddresses = "ProfessorsLaptop"
+
+**.ProfessorsLaptop.numUdpApps = 1
+**.ProfessorsLaptop.udpApp[0].typename = "VoIPApp"
+**.ProfessorsLaptop.udpApp[0].localPort = 1000
+**.ProfessorsLaptop.udpApp[0].destPort = 1000
+**.ProfessorsLaptop.udpApp[0].sendInterval = 200ms
+**.ProfessorsLaptop.udpApp[0].messageLength = 44B
+**.ProfessorsLaptop.udpApp[0].startTime = 0.1s
+**.ProfessorsLaptop.udpApp[0].maxDelay = 200ms
+**.ProfessorsLaptop.udpApp[0].destAddresses = "FTPLaptop"
+
 
 # set static routes
 **.RemoteRouter.routingFile = "StaticRoutes_RemoteRouter.irt"
