add communication ProfessorsLaptop <--> ClientLaptop (with makeshift RTP)

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -1,6 +1,7 @@
 # TO IMPLEMENT:
 # -------------
-# * video conf connection (maybe we can recycle our VoIPApp for that?)
+# * video conf connection (maybe we can recycle our VoIPApp for that?
+#                          Nope, I think we need to use RTP..)
 # * web browsing students
 # * FTP uploading student
 
@@ -104,6 +105,7 @@ repeat = 10
 #**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(250B)#get_trace()
 #**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
+# CCTV settings
 # The monitor receives videodata, is thus the client
 **.CCTVMonitoring.numUdpApps = 1
 **.CCTVMonitoring.udpApp[0].typename = "UDPVideoStreamCli"
@@ -126,25 +128,32 @@ repeat = 10
 # TODO: adjust to new max(sim-time-limit) or figure out how to read that value
 **.CCTVCamera.udpApp[0].videoSize = 2500000000B
 
-**.FTPLaptop.numUdpApps = 1
-**.FTPLaptop.udpApp[0].typename = "VoIPApp"
-**.FTPLaptop.udpApp[0].localPort = 1000
-**.FTPLaptop.udpApp[0].destPort = 1000
-**.FTPLaptop.udpApp[0].sendInterval = 200ms
-**.FTPLaptop.udpApp[0].messageLength = 44B
-**.FTPLaptop.udpApp[0].startTime = 0.1s
-**.FTPLaptop.udpApp[0].maxDelay = 200ms
-**.FTPLaptop.udpApp[0].destAddresses = "ProfessorsLaptop"
-
+# video conference settings
+# The video call application uses the Real-time Transport Protocol (RTP) over 
+# User Datagram Protocol (UDP) over Internet Protocol version 4 (IPv4).
+# TODO: actually use RTP?
 **.ProfessorsLaptop.numUdpApps = 1
 **.ProfessorsLaptop.udpApp[0].typename = "VoIPApp"
 **.ProfessorsLaptop.udpApp[0].localPort = 1000
 **.ProfessorsLaptop.udpApp[0].destPort = 1000
-**.ProfessorsLaptop.udpApp[0].sendInterval = 200ms
-**.ProfessorsLaptop.udpApp[0].messageLength = 44B
+**.ProfessorsLaptop.udpApp[0].sendInterval = 40ms
+# messageLength = 1388 bytes payload + 12 bytes bminimal RTP header
+**.ProfessorsLaptop.udpApp[0].messageLength = 1400B
 **.ProfessorsLaptop.udpApp[0].startTime = 0.1s
-**.ProfessorsLaptop.udpApp[0].maxDelay = 200ms
-**.ProfessorsLaptop.udpApp[0].destAddresses = "FTPLaptop"
+# TODO: correct?
+**.ProfessorsLaptop.udpApp[0].maxDelay = 40ms
+**.ProfessorsLaptop.udpApp[0].destAddresses = "ConferenceLaptop"
+
+**.ConferenceLaptop.numUdpApps = 1
+**.ConferenceLaptop.udpApp[0].typename = "VoIPApp"
+**.ConferenceLaptop.udpApp[0].localPort = 1000
+**.ConferenceLaptop.udpApp[0].destPort = 1000
+**.ConferenceLaptop.udpApp[0].sendInterval = 40ms
+# messageLength = 1388 bytes payload + 12 bytes bminimal RTP header
+**.ConferenceLaptop.udpApp[0].messageLength = 1400B
+**.ConferenceLaptop.udpApp[0].startTime = 0.1s
+**.ConferenceLaptop.udpApp[0].maxDelay = 40ms
+**.ConferenceLaptop.udpApp[0].destAddresses = "ProfessorsLaptop"
 
 
 # set static routes
