whoops, update TO IMPLEMENT

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -1,9 +1,10 @@
 # TO IMPLEMENT:
 # -------------
-# * video conf connection (maybe we can recycle our VoIPApp for that?
-#                          Nope, I think we need to use RTP..)
 # * web browsing students
 # * FTP uploading student
+# * (precise) data collection
+#
+# * video conf connection using real RTP? (low prio)
 
 [General]
 network = ExamTaskNetwork
@@ -129,7 +130,7 @@ repeat = 10
 **.CCTVCamera.udpApp[0].videoSize = 2500000000B
 
 # video conference settings
-# The video call application uses the Real-time Transport Protocol (RTP) over 
+# The video call application uses the Real-time Transport Protocol (RTP) over
 # User Datagram Protocol (UDP) over Internet Protocol version 4 (IPv4).
 # TODO: actually use RTP?
 **.ProfessorsLaptop.numUdpApps = 1
