--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -73,6 +73,8 @@ repeat = 10
 
 # Routing
 **.networkConfiguratorModule = ""
+**.RemoteRouter.routingFile = "StaticRoutes_RemoteRouter.irt"
+**.MainRouter.routingFile = "StaticRoutes_MainRouter.irt"
 
 # NIC settings
 **.mac.address = "auto"
@@ -85,11 +87,9 @@ repeat = 10
 **.mgmt.frameCapacity = 50
 
 # Internet TCP settings
-#**.Internet.numTcpApps = 1
-#**.Internet.tcpApp[0].typename = "TCPGenericSrvApp"
-#**.Internet.tcpApp[0].localPort = 80
-
-# TODO: TCP apps for ftp, professor, cctv etc
+**.Internet.numTcpApps = 1
+**.Internet.tcpApp[0].typename = "TCPGenericSrvApp"
+**.Internet.tcpApp[0].localPort = 80
 
 # BrowsingLaptop TCP settings
 #**.BrowsingLaptop[*].numTcpApps = 1
@@ -141,7 +141,6 @@ repeat = 10
 # messageLength = 1388 bytes payload + 12 bytes bminimal RTP header
 **.ProfessorsLaptop.udpApp[0].messageLength = 1400B
 **.ProfessorsLaptop.udpApp[0].startTime = 0.1s
-# TODO: correct?
 **.ProfessorsLaptop.udpApp[0].maxDelay = 40ms
 **.ProfessorsLaptop.udpApp[0].destAddresses = "ConferenceLaptop"
 
@@ -156,7 +155,3 @@ repeat = 10
 **.ConferenceLaptop.udpApp[0].maxDelay = 40ms
 **.ConferenceLaptop.udpApp[0].destAddresses = "ProfessorsLaptop"
 
-
-# set static routes
-**.RemoteRouter.routingFile = "StaticRoutes_RemoteRouter.irt"
-**.MainRouter.routingFile = "StaticRoutes_MainRouter.irt"
