implement FTP upload

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -1,7 +1,6 @@
 # TO IMPLEMENT:
 # -------------
 # * web browsing students
-# * FTP uploading student
 # * (precise) data collection
 #
 # * video conf connection using real RTP? (low prio)
@@ -87,9 +86,27 @@ repeat = 10
 **.mgmt.frameCapacity = 50
 
 # Internet TCP settings
-**.Internet.numTcpApps = 1
+**.Internet.numTcpApps = 2
 **.Internet.tcpApp[0].typename = "TCPGenericSrvApp"
 **.Internet.tcpApp[0].localPort = 80
+**.Internet.tcpApp[1].typename = "TCPSinkApp"
+**.Internet.tcpApp[1].localPort = 21
+
+# FTP settings
+**.FTPLaptop.numTcpApps = 1
+**.FTPLaptop.tcpApp[0].typename = "TCPSessionApp"
+**.FTPLaptop.tcpApp[0].active = true
+**.FTPLaptop.tcpApp[0].localAddress = ""
+**.FTPLaptop.tcpApp[0].localPort = -1
+**.FTPLaptop.tcpApp[0].connectAddress = "Internet"
+**.FTPLaptop.tcpApp[0].connectPort = 21
+# TODO: plausible starttime?
+**.FTPLaptop.tcpApp[0].tOpen = 0s
+**.FTPLaptop.tcpApp[0].tSend = 0s
+# TODO: is file size large enough to last whole simulation?
+**.FTPLaptop.tcpApp[0].sendBytes = 100MiB
+**.FTPLaptop.tcpApp[0].sendScript = ""
+**.FTPLaptop.tcpApp[0].tClose = 0s
 
 # BrowsingLaptop TCP settings
 #**.BrowsingLaptop[*].numTcpApps = 1
