implement web browsing students

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -1,6 +1,5 @@
 # TO IMPLEMENT:
 # -------------
-# * web browsing students
 # * (precise) data collection
 #
 # * video conf connection using real RTP? (low prio)
@@ -109,19 +108,20 @@ repeat = 10
 **.FTPLaptop.tcpApp[0].tClose = 0s
 
 # BrowsingLaptop TCP settings
-#**.BrowsingLaptop[*].numTcpApps = 1
-#**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
-#**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
-#**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
-#**.BrowsingLaptop[*].tcpApp[0].localPort = -1
-#**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
-#**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
+**.BrowsingLaptop[*].numTcpApps = 1
+**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
+**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
+**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
+**.BrowsingLaptop[*].tcpApp[0].localPort = -1
+**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
+**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
 # TODO: param OK?
-#**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
+**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
 # Group specific parameters:
 # The requested size (in Byte) from trace file trace_13.txt
-#**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(250B)#get_trace()
-#**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
+# TODO: do the math.
+**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(250B)#get_trace()
+**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
 # CCTV settings
 # The monitor receives videodata, is thus the client
