--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -7,8 +7,17 @@
 [General]
 network = ExamTaskNetwork
 # TODO: choose sensible values
-sim-time-limit = ${simtime=1000, 3000, 10000}s
+sim-time-limit = ${simtime=100, 3000, 10000}s
 repeat = 10
+
+**.MainRouter.ppp[*].numInputHooks = 1
+**.FTPLaptop.ppp[*].numOutputHooks = 1
+**.ppp[*].inputHook[0].typename = "ThruputMeter"
+**.ppp[*].inputHook[0].maxInterval = 0.2s
+**.ppp[*].inputHook[0].batchSize = 10000
+**.ppp[*].inputHook[0].**.vector-recording = true
+**.ppp[*].inputHook[0].**.scalar-recording = true
+
 
 # some can be enabled if desired, but
 # this produces a lot of data
@@ -138,13 +147,14 @@ repeat = 10
 **.CCTVCamera.udpApp[0].typename = "UDPVideoStreamSvr"
 **.CCTVCamera.udpApp[0].localPort = 1000
 **.CCTVCamera.udpApp[0].sendInterval = 40ms
-**.CCTVCamera.udpApp[0].packetLen = 10000B
+# TODO: Check if 10000B is the correct size.
+**.CCTVCamera.udpApp[0].packetLen = 10KiB
 # make sure the video keeps streaming the whole experiment:
 # 25 transmissions à 10kB per second = 250000 B / s
 # * max(sim-time-limit) [currently 10000]
 # (plus 5s just to be sure)
 # TODO: adjust to new max(sim-time-limit) or figure out how to read that value
-**.CCTVCamera.udpApp[0].videoSize = 2500000000B
+**.CCTVCamera.udpApp[0].videoSize = 250000KiB
 
 # video conference settings
 # The video call application uses the Real-time Transport Protocol (RTP) over
