Added correct reply length.

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -129,8 +129,8 @@ repeat = 10
 # Group specific parameters:
 # The requested size (in Byte) from trace file trace_13.txt
 # TODO: do the math.
-**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(250B)#get_trace()
-**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
+**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)#get_trace()
+**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(30s)
 
 # CCTV settings
 # The monitor receives videodata, is thus the client
