Added several vectors to output parameters

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -7,16 +7,34 @@
 [General]
 network = ExamTaskNetwork
 # TODO: choose sensible values
-sim-time-limit = ${simtime=100, 3000, 10000}s
-repeat = 10
+sim-time-limit = ${simtime=1000}s
+repeat = 1
+# This parameter denotes the number of webbrowsing clients
+**.num_laptops = ${100,200,300,400,500,600,700,800,900,1000}
 
+# Add input and output hooks for mainRouter
 **.MainRouter.ppp[*].numInputHooks = 1
+**.MainRouter.ppp[*].numOutputHooks = 1
+
+# Add output hook for FTP Client
 **.FTPLaptop.ppp[*].numOutputHooks = 1
+
+# Enable vector recording on input and output hooks. Set some other parameters. 
 **.ppp[*].inputHook[0].typename = "ThruputMeter"
-**.ppp[*].inputHook[0].maxInterval = 0.2s
+**.ppp[*].inputHook[0].maxInterval = 1s
 **.ppp[*].inputHook[0].batchSize = 10000
 **.ppp[*].inputHook[0].**.vector-recording = true
 **.ppp[*].inputHook[0].**.scalar-recording = true
+**.ppp[*].outputHook[0].typename = "ThruputMeter"
+**.ppp[*].outputHook[0].maxInterval = 1s
+**.ppp[*].outputHook[0].batchSize = 10000
+**.ppp[*].outputHook[0].**.vector-recording = true
+**.ppp[*].outputHook[0].**.scalar-recording = true
+
+**.BrowsingLaptop[*].tcpApp[0].vector-recording = true
+
+# Add vector recording for queues at routers
+**.ppp[*].queue.**.vector-recording = true
 
 
 # some can be enabled if desired, but
