add network without CCTV

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -5,7 +5,6 @@
 # * video conf connection using real RTP? (low prio)
 
 [General]
-network = ExamTaskNetwork
 # TODO: choose sensible values
 sim-time-limit = ${simtime=1000}s
 repeat = 1
@@ -150,30 +149,6 @@ repeat = 1
 **.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)#get_trace()
 **.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
-# CCTV settings
-# The monitor receives videodata, is thus the client
-**.CCTVMonitoring.numUdpApps = 1
-**.CCTVMonitoring.udpApp[0].typename = "UDPVideoStreamCli"
-**.CCTVMonitoring.udpApp[0].serverAddress = "CCTVCamera"
-**.CCTVMonitoring.udpApp[0].serverPort = 1000
-**.CCTVMonitoring.udpApp[0].localPort = 1000
-**.CCTVMonitoring.udpApp[0].startTime = 1s
-
-# The [CCTV] stream is modelled as a constant UDP stream containing
-# packets of size 10KB every 40 ms.
-**.CCTVCamera.numUdpApps = 1
-**.CCTVCamera.udpApp[0].typename = "UDPVideoStreamSvr"
-**.CCTVCamera.udpApp[0].localPort = 1000
-**.CCTVCamera.udpApp[0].sendInterval = 40ms
-# TODO: Check if 10000B is the correct size.
-**.CCTVCamera.udpApp[0].packetLen = 10KiB
-# make sure the video keeps streaming the whole experiment:
-# 25 transmissions à 10kB per second = 250000 B / s
-# * max(sim-time-limit) [currently 10000]
-# (plus 5s just to be sure)
-# TODO: adjust to new max(sim-time-limit) or figure out how to read that value
-**.CCTVCamera.udpApp[0].videoSize = 250000KiB
-
 # video conference settings
 # The video call application uses the Real-time Transport Protocol (RTP) over
 # User Datagram Protocol (UDP) over Internet Protocol version 4 (IPv4).
@@ -200,3 +175,32 @@ repeat = 1
 **.ConferenceLaptop.udpApp[0].maxDelay = 40ms
 **.ConferenceLaptop.udpApp[0].destAddresses = "ProfessorsLaptop"
 
+[Config ExamTaskNetwork]
+network = ExamTaskNetwork
+
+# CCTV settings
+# The monitor receives videodata, is thus the client
+**.CCTVMonitoring.numUdpApps = 1
+**.CCTVMonitoring.udpApp[0].typename = "UDPVideoStreamCli"
+**.CCTVMonitoring.udpApp[0].serverAddress = "CCTVCamera"
+**.CCTVMonitoring.udpApp[0].serverPort = 1000
+**.CCTVMonitoring.udpApp[0].localPort = 1000
+**.CCTVMonitoring.udpApp[0].startTime = 1s
+
+# The [CCTV] stream is modelled as a constant UDP stream containing
+# packets of size 10KB every 40 ms.
+**.CCTVCamera.numUdpApps = 1
+**.CCTVCamera.udpApp[0].typename = "UDPVideoStreamSvr"
+**.CCTVCamera.udpApp[0].localPort = 1000
+**.CCTVCamera.udpApp[0].sendInterval = 40ms
+# TODO: Check if 10000B is the correct size.
+**.CCTVCamera.udpApp[0].packetLen = 10KiB
+# make sure the video keeps streaming the whole experiment:
+# 25 transmissions à 10kB per second = 250000 B / s
+# * max(sim-time-limit) [currently 10000]
+# (plus 5s just to be sure)
+# TODO: adjust to new max(sim-time-limit) or figure out how to read that value
+**.CCTVCamera.udpApp[0].videoSize = 250000KiB
+
+[Config ExamTaskNetwork_no_CCTV]
+network = ExamTaskNetwork_no_CCTV
