cleanup: rm superfluous comments

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -35,7 +35,6 @@ repeat = 1
 # Add vector recording for queues at routers
 **.ppp[*].queue.**.vector-recording = true
 
-
 # some can be enabled if desired, but
 # this produces a lot of data
 **.thruputMeter.**.vector-recording = true	
@@ -145,14 +144,12 @@ repeat = 1
 **.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
 # Group specific parameters:
 # The requested size (in Byte) from trace file trace_13.txt
-# TODO: do the math.
-**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)#get_trace()
+**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)
 **.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
 # video conference settings
 # The video call application uses the Real-time Transport Protocol (RTP) over
 # User Datagram Protocol (UDP) over Internet Protocol version 4 (IPv4).
-# TODO: actually use RTP?
 **.ProfessorsLaptop.numUdpApps = 1
 **.ProfessorsLaptop.udpApp[0].typename = "VoIPApp"
 **.ProfessorsLaptop.udpApp[0].localPort = 1000
