add multiple repetitions

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -7,7 +7,7 @@
 [General]
 # TODO: choose sensible values
 sim-time-limit = ${simtime=1000}s
-repeat = 1
+repeat = ${10, 20, 50}
 # This parameter denotes the number of webbrowsing clients
 **.num_laptops = ${100,200,300,400,500,600,700,800,900,1000}
 
