--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -30,8 +30,6 @@ repeat = ${10, 20, 50}
 **.ppp[*].outputHook[0].**.vector-recording = true
 **.ppp[*].outputHook[0].**.scalar-recording = true
 
-**.BrowsingLaptop[*].tcpApp[0].vector-recording = true
-
 # Add vector recording for queues at routers
 **.ppp[*].queue.**.vector-recording = true
 
@@ -132,21 +130,6 @@ repeat = ${10, 20, 50}
 **.FTPLaptop.tcpApp[0].sendScript = ""
 **.FTPLaptop.tcpApp[0].tClose = 0s
 
-# BrowsingLaptop TCP settings
-**.BrowsingLaptop[*].numTcpApps = 1
-**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
-**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
-**.BrowsingLaptop[*].tcpApp[0].localPort = -1
-**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
-**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
-# TODO: param OK?
-**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
-# Group specific parameters:
-# The requested size (in Byte) from trace file trace_13.txt
-**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)
-**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
-
 # video conference settings
 # The video call application uses the Real-time Transport Protocol (RTP) over
 # User Datagram Protocol (UDP) over Internet Protocol version 4 (IPv4).
@@ -199,5 +182,39 @@ network = ExamTaskNetwork
 # TODO: adjust to new max(sim-time-limit) or figure out how to read that value
 **.CCTVCamera.udpApp[0].videoSize = 250000KiB
 
+# BrowsingLaptop settings (off by default to enable steady-state determination)
+**.BrowsingLaptop[*].tcpApp[0].vector-recording = true
+
+**.BrowsingLaptop[*].numTcpApps = 1
+**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
+**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
+**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
+**.BrowsingLaptop[*].tcpApp[0].localPort = -1
+**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
+**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
+# TODO: param OK?
+**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
+# Group specific parameters:
+# The requested size (in Byte) from trace file trace_13.txt
+**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)
+**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
+
 [Config ExamTaskNetwork_no_CCTV]
 network = ExamTaskNetwork_no_CCTV
+
+# BrowsingLaptop settings (off by default to enable steady-state determination)
+**.BrowsingLaptop[*].tcpApp[0].vector-recording = true
+
+**.BrowsingLaptop[*].numTcpApps = 1
+**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
+**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
+**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
+**.BrowsingLaptop[*].tcpApp[0].localPort = -1
+**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
+**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
+# TODO: param OK?
+**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
+# Group specific parameters:
+# The requested size (in Byte) from trace file trace_13.txt
+**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)
+**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
