Turned of vector recording in General config

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -22,20 +22,20 @@ repeat = ${10, 20, 50}
 **.ppp[*].inputHook[0].typename = "ThruputMeter"
 **.ppp[*].inputHook[0].maxInterval = 1s
 **.ppp[*].inputHook[0].batchSize = 10000
-**.ppp[*].inputHook[0].**.vector-recording = true
+**.ppp[*].inputHook[0].**.vector-recording = false
 **.ppp[*].inputHook[0].**.scalar-recording = true
 **.ppp[*].outputHook[0].typename = "ThruputMeter"
 **.ppp[*].outputHook[0].maxInterval = 1s
 **.ppp[*].outputHook[0].batchSize = 10000
-**.ppp[*].outputHook[0].**.vector-recording = true
+**.ppp[*].outputHook[0].**.vector-recording = false
 **.ppp[*].outputHook[0].**.scalar-recording = true
 
 # Add vector recording for queues at routers
-**.ppp[*].queue.**.vector-recording = true
+**.ppp[*].queue.**.vector-recording = false
 
 # some can be enabled if desired, but
 # this produces a lot of data
-**.thruputMeter.**.vector-recording = true	
+**.thruputMeter.**.vector-recording = false	
 # disable all others
 **.vector-recording = false
 
