Set dataTransferMode to bytecount for ftplaptop to allow throughput calculations

--- a/examTask/omnetpp.ini
+++ b/examTask/omnetpp.ini
@@ -7,16 +7,15 @@
 [General]
 # TODO: choose sensible values
 sim-time-limit = ${simtime=1000}s
-repeat = ${10, 20, 50}
+repeat = 15
 # This parameter denotes the number of webbrowsing clients
-**.num_laptops = ${100,200,300,400,500,600,700,800,900,1000}
+**.num_laptops = ${1,5,10,15,20,30,40,50,60}
 
 # Add input and output hooks for mainRouter
 **.MainRouter.ppp[*].numInputHooks = 1
 **.MainRouter.ppp[*].numOutputHooks = 1
-
-# Add output hook for FTP Client
-**.FTPLaptop.ppp[*].numOutputHooks = 1
+**.RemoteRouter.ppp[*].numInputHooks = 1
+**.RemoteRouter.ppp[*].numOutputHooks = 1
 
 # Enable vector recording on input and output hooks. Set some other parameters. 
 **.ppp[*].inputHook[0].typename = "ThruputMeter"
@@ -29,7 +28,11 @@ repeat = ${10, 20, 50}
 **.ppp[*].outputHook[0].batchSize = 10000
 **.ppp[*].outputHook[0].**.vector-recording = false
 **.ppp[*].outputHook[0].**.scalar-recording = true
+**.ppp[*].queueType = "DropTailQueue"
+**.ppp[*].queue.frameCapacity = 50
 
+# Add vector recording for browsers
+**.BrowsingLaptop[*].tcpApp[0].vector-recording = false
 # Add vector recording for queues at routers
 **.ppp[*].queue.**.vector-recording = false
 
@@ -80,8 +83,8 @@ repeat = ${10, 20, 50}
 **.tcp.tcpAlgorithmClass = "TCPNewReno"
 **.tcp.windowScalingSupport = true
 # This is important for the TCPGenericSrvApp to reply to the requests
-**.tcpApp[*].dataTransferMode = "object"
-
+**.BrowsingLaptop[*].tcpApp[0].dataTransferMode = "object"
+**.FTPLaptop.tcpApp[0].dataTransferMode = "bytecount"
 # the PDUs of upper layers (e.g., TCP) should be as large as possible
 # to reduce protocol overhead: Assimung a 14-Byte Ethernet header (i.e. without
 # IEEE802.1Q tags bc I doubt we're using the VLAN tagging feature) +
@@ -114,6 +117,7 @@ repeat = ${10, 20, 50}
 **.Internet.tcpApp[1].typename = "TCPSinkApp"
 **.Internet.tcpApp[1].localPort = 21
 
+
 # FTP settings
 **.FTPLaptop.numTcpApps = 1
 **.FTPLaptop.tcpApp[0].typename = "TCPSessionApp"
@@ -123,12 +127,12 @@ repeat = ${10, 20, 50}
 **.FTPLaptop.tcpApp[0].connectAddress = "Internet"
 **.FTPLaptop.tcpApp[0].connectPort = 21
 # TODO: plausible starttime?
-**.FTPLaptop.tcpApp[0].tOpen = 0s
-**.FTPLaptop.tcpApp[0].tSend = 0s
+**.FTPLaptop.tcpApp[0].tOpen = 1s
+**.FTPLaptop.tcpApp[0].tSend = 1s
 # TODO: is file size large enough to last whole simulation?
-**.FTPLaptop.tcpApp[0].sendBytes = 100MiB
+**.FTPLaptop.tcpApp[0].sendBytes = 100000MiB
 **.FTPLaptop.tcpApp[0].sendScript = ""
-**.FTPLaptop.tcpApp[0].tClose = 0s
+**.FTPLaptop.tcpApp[0].tClose = 999s
 
 # video conference settings
 # The video call application uses the Real-time Transport Protocol (RTP) over
@@ -140,7 +144,7 @@ repeat = ${10, 20, 50}
 **.ProfessorsLaptop.udpApp[0].sendInterval = 40ms
 # messageLength = 1388 bytes payload + 12 bytes bminimal RTP header
 **.ProfessorsLaptop.udpApp[0].messageLength = 1400B
-**.ProfessorsLaptop.udpApp[0].startTime = 0.1s
+**.ProfessorsLaptop.udpApp[0].startTime = 1.5s
 **.ProfessorsLaptop.udpApp[0].maxDelay = 100ms
 **.ProfessorsLaptop.udpApp[0].destAddresses = "ConferenceLaptop"
 
@@ -151,9 +155,25 @@ repeat = ${10, 20, 50}
 **.ConferenceLaptop.udpApp[0].sendInterval = 40ms
 # messageLength = 1388 bytes payload + 12 bytes bminimal RTP header
 **.ConferenceLaptop.udpApp[0].messageLength = 1400B
-**.ConferenceLaptop.udpApp[0].startTime = 0.1s
+**.ConferenceLaptop.udpApp[0].startTime = 1.5s
 **.ConferenceLaptop.udpApp[0].maxDelay = 100ms
 **.ConferenceLaptop.udpApp[0].destAddresses = "ProfessorsLaptop"
+
+
+# BrowsingLaptop settings (off by default to enable steady-state determination)
+**.BrowsingLaptop[*].numTcpApps = 1
+**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
+**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
+**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
+**.BrowsingLaptop[*].tcpApp[0].localPort = -1
+**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
+**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
+# TODO: param OK?
+**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
+# Group specific parameters:
+# The requested size (in Byte) from trace file trace_13.txt
+**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)
+**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
 [Config ExamTaskNetwork]
 network = ExamTaskNetwork
@@ -161,60 +181,51 @@ network = ExamTaskNetwork
 # CCTV settings
 # The monitor receives videodata, is thus the client
 **.CCTVMonitoring.numUdpApps = 1
-**.CCTVMonitoring.udpApp[0].typename = "UDPVideoStreamCli"
-**.CCTVMonitoring.udpApp[0].serverAddress = "CCTVCamera"
-**.CCTVMonitoring.udpApp[0].serverPort = 1000
+**.CCTVMonitoring.udpApp[0].typename = "VoIPApp"
 **.CCTVMonitoring.udpApp[0].localPort = 1000
-**.CCTVMonitoring.udpApp[0].startTime = 1s
+**.CCTVMonitoring.udpApp[0].destPort = 1000
+**.CCTVMonitoring.udpApp[0].startTime = 1.25s
+**.CCTVMonitoring.udpApp[0].maxDelay = 100ms
+**.CCTVMonitoring.udpApp[0].sendInterval = 40ms
+**.CCTVMonitoring.udpApp[0].messageLength = 10KiB
+
+# The [CCTV] stream is modelled as a constant UDP stream containing
+**.CCTVCamera.numUdpApps = 1
+**.CCTVCamera.udpApp[0].typename = "VoIPApp"
+**.CCTVCamera.udpApp[0].localPort = 1000
+**.CCTVCamera.udpApp[0].destPort = 1000
+**.CCTVCamera.udpApp[0].sendInterval = 40ms
+# packets of size 10KB every 40 ms.
+**.CCTVCamera.udpApp[0].messageLength = 10KiB
+**.CCTVCamera.udpApp[0].startTime = 1.25s
+**.CCTVCamera.udpApp[0].maxDelay = 100ms
+**.CCTVCamera.udpApp[0].destAddresses = "CCTVMonitoring"
+
+# The monitor receives videodata, is thus the client
+#**.CCTVMonitoring.numUdpApps = 1
+#**.CCTVMonitoring.udpApp[0].typename = "UDPVideoStreamCli"
+#**.CCTVMonitoring.udpApp[0].serverAddress = "CCTVCamera"
+#**.CCTVMonitoring.udpApp[0].serverPort = 1000
+#**.CCTVMonitoring.udpApp[0].localPort = 1000
+#**.CCTVMonitoring.udpApp[0].startTime = 2s
 
 # The [CCTV] stream is modelled as a constant UDP stream containing
 # packets of size 10KB every 40 ms.
-**.CCTVCamera.numUdpApps = 1
-**.CCTVCamera.udpApp[0].typename = "UDPVideoStreamSvr"
-**.CCTVCamera.udpApp[0].localPort = 1000
-**.CCTVCamera.udpApp[0].sendInterval = 40ms
+#**.CCTVCamera.numUdpApps = 1
+#**.CCTVCamera.udpApp[0].typename = "UDPVideoStreamSvr"
+#**.CCTVCamera.udpApp[0].localPort = 1000
+#**.CCTVCamera.udpApp[0].sendInterval = 40ms
 # TODO: Check if 10000B is the correct size.
-**.CCTVCamera.udpApp[0].packetLen = 10KiB
+#**.CCTVCamera.udpApp[0].packetLen = 10KiB
 # make sure the video keeps streaming the whole experiment:
 # 25 transmissions à 10kB per second = 250000 B / s
 # * max(sim-time-limit) [currently 10000]
 # (plus 5s just to be sure)
 # TODO: adjust to new max(sim-time-limit) or figure out how to read that value
-**.CCTVCamera.udpApp[0].videoSize = 250000KiB
+#**.CCTVCamera.udpApp[0].videoSize = 250000KiB
 
-# BrowsingLaptop settings (off by default to enable steady-state determination)
-**.BrowsingLaptop[*].tcpApp[0].vector-recording = true
 
-**.BrowsingLaptop[*].numTcpApps = 1
-**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
-**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
-**.BrowsingLaptop[*].tcpApp[0].localPort = -1
-**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
-**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
-# TODO: param OK?
-**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
-# Group specific parameters:
-# The requested size (in Byte) from trace file trace_13.txt
-**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)
-**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
 
 [Config ExamTaskNetwork_no_CCTV]
 network = ExamTaskNetwork_no_CCTV
 
-# BrowsingLaptop settings (off by default to enable steady-state determination)
-**.BrowsingLaptop[*].tcpApp[0].vector-recording = true
-
-**.BrowsingLaptop[*].numTcpApps = 1
-**.BrowsingLaptop[*].tcpApp[0].typename = "TCPBasicClientApp"
-**.BrowsingLaptop[*].tcpApp[0].connectAddress = "Internet"
-**.BrowsingLaptop[*].tcpApp[0].thinkTime = 0
-**.BrowsingLaptop[*].tcpApp[0].localPort = -1
-**.BrowsingLaptop[*].tcpApp[0].numRequestsPerSession = 1
-**.BrowsingLaptop[*].tcpApp[0].connectPort = 80
-# TODO: param OK?
-**.BrowsingLaptop[*].tcpApp[0].requestLength = 8KiB
-# Group specific parameters:
-# The requested size (in Byte) from trace file trace_13.txt
-**.BrowsingLaptop[*].tcpApp[0].replyLength = exponential(671539B)
-**.BrowsingLaptop[*].tcpApp[0].idleInterval = exponential(20s)
